--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,12 +6,12 @@
     "default_popup": "popup/index.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "assets/background.js"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["assets/content.js"]
     }
   ],
   "permissions": ["storage", "scripting", "tabs"]
